--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Dark Portal Token/$PORTAL | Your first Fantom token</title>
+  <title>Dark Portal Token/$PORTAL | Your first Fantom token after BSC</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Dark Portal Token fantom chain DeFi token with Liquidity reflection" />
