--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="./ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+  
+  <meta itemprop="name" content="Dark Portal Token/$PORTAL | Your first Fantom token after BSC">
+ <meta itemprop="description" content="Dark Portal Token is a DeFi asset on Fantom Opera chain contract is 0x0aa2037e40a78a169b5214418d66377ab828cb23">
+ <meta itemprop="image" content="https://darkportaltoken.com/images/darkportalbig.png">
 
 </head>
 
