--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <div style="margin-bottom: 1rem;">
                     Dark Portal was open for all the people, who is looking for a better place after BSC network where
                     scammers are going out of control!<br><br>
-                    We do believe that DeFi could and shoul be safe, and only financial risk should be afraid and not
+                    We do believe that DeFi could and should be safe, and only financial risk should be afraid and not
                     getting victims of HoneyPot,RugPul, delayed RugPull, minting...<br>
                     <br>
                     Dark Portal Token is made to be your first DeFi coin on Fantom-chain!
@@ -128,11 +128,13 @@
                 <div class="card mb-4 rounded-3 shadow-sm">
                   <h3>Tokenomics:</h3>
                   <div style="margin-bottom: 1rem;">
+                    - Fair launched<br>
                     - TotalSupply: 100,000,000,000<br>
                     - BuyFee: 5%<br>
                     - SellFee: 20% <br>
                     - Liquidity Reflection: Buy 2% / Sell 6%<br>
                     - Fees will be lowered then removed over time!<br>
+                    - LP Locked on 0x0000dead<br>
                   </div>
 
                 </div>
