--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
                 <a class="btn btn-primary btn-lg"
                   href="https://ftmscan.com/address/0x0aa2037e40a78a169b5214418d66377ab828cb23" target="_blank">Check
                   the Contract</a>
+                <a class="btn btn-warning btn-lg"
+                  href="https://www.dextools.io/app/fantom/pair-explorer/0x8c203ccb9fb88d63dffb94ca445e378c05ab0f7b" target="_blank">Chart</a>
+
+
+  
               </center>
 
             </div>
