--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="./ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  
+
   <meta itemprop="name" content="Dark Portal Token/$PORTAL | Your first Fantom token after BSC">
- <meta itemprop="description" content="Dark Portal Token is a DeFi asset on Fantom Opera chain contract is 0x0aa2037e40a78a169b5214418d66377ab828cb23">
- <meta itemprop="image" content="https://darkportaltoken.com/images/darkportalbig.png">
+  <meta itemprop="description"
+    content="Dark Portal Token is a DeFi asset on Fantom Opera chain contract is 0x0aa2037e40a78a169b5214418d66377ab828cb23">
+  <meta itemprop="image" content="https://darkportaltoken.com/images/darkportalbig.png">
 
 </head>
 
@@ -145,7 +146,8 @@
             <h3>How to buy:</h3>
             - Install Metamask or Trust Wallet<br>
             <center>
-              <a href="https://metamask.io/" target="_blank"><img src="./images/metamask.png" width="25%"></a>
+              <a href="https://metamask.io/" target="_blank"><img src="./images/metamask.png" style="max-width: 300px;"
+                  class="img-fluid"></a>
             </center>
             <br>
             - Add Fantom Chain into your Wallet (<a href="https://docs.fantom.foundation/tutorials/set-up-metamask"
@@ -159,16 +161,18 @@
             <div style="margin: 1rem;">
 
               <center>
-                <a href="https://spookyswap.finance/swap?outputCurrency=0x0aa2037e40a78a169b5214418d66377ab828cb23"
-                  type="button" target="_blank" class="btn btn-success btn-lg ">Buy on SpookySwap</a>
-                <a class="btn btn-primary btn-lg"
-                  href="https://ftmscan.com/address/0x0aa2037e40a78a169b5214418d66377ab828cb23" target="_blank">Check
-                  the Contract</a>
-                <a class="btn btn-warning btn-lg"
-                  href="https://www.dextools.io/app/fantom/pair-explorer/0x8c203ccb9fb88d63dffb94ca445e378c05ab0f7b" target="_blank">Chart</a>
+                <a style="margin-top: 0.5rem;"
+                  href="https://spookyswap.finance/swap?outputCurrency=0x0aa2037e40a78a169b5214418d66377ab828cb23"
+                  target="_blank" class="btn btn-success btn-lg ">👻Buy on SpookySwap</a>
+                <a style="margin-top: 0.5rem;" class="btn btn-primary btn-lg"
+                  href="https://ftmscan.com/address/0x0aa2037e40a78a169b5214418d66377ab828cb23"
+                  target="_blank">📋Contract</a>
+                <a style="margin-top: 0.5rem;" class="btn btn-warning btn-lg"
+                  href="https://www.dextools.io/app/fantom/pair-explorer/0x8c203ccb9fb88d63dffb94ca445e378c05ab0f7b"
+                  target="_blank">📈Chart</a>
 
 
-  
+
               </center>
 
             </div>
