--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
           <div class="col-sm-4 offset-md-1 py-4">
             <h4 class="text-white">Menu</h4>
             <ul class="list-unstyled">
-              <li><a href="https://t.me/darkportaltoken" class="text-white">Telegram</a></li>
-              <li><a href="https://twitter.com/TheDarkToken" class="text-white">Twitter</a></li>
+              <li><a href="https://t.me/darkportaltoken" target="_blank" class="text-white">Telegram</a></li>
+              <li><a href="https://twitter.com/TheDarkToken" target="_blank" class="text-white">Twitter</a></li>
               <li><a href="https://spookyswap.finance/swap?outputCurrency=0x0aa2037e40a78a169b5214418d66377ab828cb23"
-                  class="text-white">Exchange SpookySwap</a></li>
-              <li><a href="https://ftmscan.com/address/0x0aa2037e40a78a169b5214418d66377ab828cb23"
+                  target="_blank" class="text-white">Exchange SpookySwap</a></li>
+              <li><a href="https://ftmscan.com/address/0x0aa2037e40a78a169b5214418d66377ab828cb23" target="_blank"
                   class="text-white">Contract(FTMScan)</a></li>
             </ul>
           </div>
@@ -82,9 +82,27 @@
 
   <prologe>
     <section>
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
+      <div style="margin-top: 1rem;" class="container">
+
+
+        <div class="row row-cols-1 row-cols-md-2 mb-2 text-center">
+          <div style="display: flex;  align-items: center;" class="col">
+            <div style="padding: 2rem;" class="card mb-4 rounded-3 shadow-sm">
+
+              <div style="text-align: left;" style="margin-bottom: 1rem;">
+                <h3>Our Mission:</h3>
+
+                Dark Portal was open for all the people, who is looking for a better place after BSC network where
+                scammers are going out of control!<br><br>
+                We do believe that DeFi could and should be safe, and only financial risk should be afraid and not
+                getting victims of HoneyPot,RugPul, delayed RugPull, minting...<br>
+                <br>
+                Dark Portal Token is made to be your first DeFi coin on Fantom-chain!
+              </div>
+
+            </div>
+          </div>
+          <div class="col">
             <center>
               <img src="./images/darkportalbig.png" class="img-fluid">
             </center>
@@ -100,157 +118,186 @@
                       class="fab fa-twitter"></i></a></li>
 
 
-                <li class="list-inline-item"><a href="#" target="_blank"
-                    class="btn-floating btn-lg rgba-white-slight mx-2"><i style="font-size: 3.2rem; color:#afafaf"
-                      class="fab fa-reddit"></i></a></li>
+                <li class="list-inline-item"><a class="btn-floating btn-lg rgba-white-slight mx-2"><i
+                      style="font-size: 3.2rem; color:#afafaf" class="fab fa-reddit"></i></a></li>
 
-                <li class="list-inline-item"><a href="#" target="_blank"
-                    class="btn-floating btn-lg rgba-white-slight mx-2"><i style="font-size: 3.2rem; color:#afafaf"
-                      class="fab fa-facebook"></i></a></li>
+                <li class="list-inline-item"><a class="btn-floating btn-lg rgba-white-slight mx-2"><i
+                      style="font-size: 3.2rem; color:#afafaf" class="fab fa-facebook"></i></a></li>
               </ul>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-            <div class="row row-cols-1 row-cols-md-2 mb-2 text-center">
-              <div class="col">
-                <div class="card mb-4 rounded-3 shadow-sm">
-                  <h3>Mission:</h3>
-                  <div style="margin-bottom: 1rem;">
-                    Dark Portal was open for all the people, who is looking for a better place after BSC network where
-                    scammers are going out of control!<br><br>
-                    We do believe that DeFi could and should be safe, and only financial risk should be afraid and not
-                    getting victims of HoneyPot,RugPul, delayed RugPull, minting...<br>
-                    <br>
-                    Dark Portal Token is made to be your first DeFi coin on Fantom-chain!
-                  </div>
+    <section style="background-color: #222324;">
 
-                </div>
-              </div>
-              <div class="col">
-                <div class="card mb-4 rounded-3 shadow-sm">
-                  <h3>Tokenomics:</h3>
-                  <div style="margin-bottom: 1rem;">
-                    - Fair launched<br>
-                    - TotalSupply: 100,000,000,000<br>
-                    - BuyFee: 5%<br>
-                    - SellFee: 20% <br>
-                    - Liquidity Reflection: Buy 2% / Sell 6%<br>
-                    - Fees will be lowered then removed over time!<br>
-                    - LP Locked on 0x0000dead<br>
-                  </div>
-
-                </div>
-              </div>
-            </div>
-
-
-            <h3>How to buy:</h3>
-            - Install Metamask or Trust Wallet<br>
-            <center>
-              <a href="https://metamask.io/" target="_blank"><img src="./images/metamask.png" style="max-width: 300px;"
-                  class="img-fluid"></a>
-            </center>
-            <br>
-            - Add Fantom Chain into your Wallet (<a href="https://docs.fantom.foundation/tutorials/set-up-metamask"
-              target="_blank">https://docs.fantom.foundation/tutorials/set-up-metamask</a>)
-            <br>
-            - Buy/Transfer some asset to Fantom network (Recommended: <a href="https://anyswap.exchange/#/router"
-              target="_blank">https://anyswap.exchange/#/router</a> )
-            <br>
-            - Buy on SpookySwap / Slippage 5-10%
-            <br>
-            <div style="margin: 1rem;">
-
-              <center>
-                <a style="margin-top: 0.5rem;"
-                  href="https://spookyswap.finance/swap?outputCurrency=0x0aa2037e40a78a169b5214418d66377ab828cb23"
-                  target="_blank" class="btn btn-success btn-lg ">👻Buy on SpookySwap</a>
-                <a style="margin-top: 0.5rem;" class="btn btn-primary btn-lg"
-                  href="https://ftmscan.com/address/0x0aa2037e40a78a169b5214418d66377ab828cb23"
-                  target="_blank">📋Contract</a>
-                <a style="margin-top: 0.5rem;" class="btn btn-warning btn-lg"
-                  href="https://www.dextools.io/app/fantom/pair-explorer/0x8c203ccb9fb88d63dffb94ca445e378c05ab0f7b"
-                  target="_blank">📈Chart</a>
-
-
-
-              </center>
-
-            </div>
+      <div class="container">
 
 
 
 
+        <div class="row row-cols-1 row-cols-md-2 mb-2 text-center">
+          <div class="col">
 
-            <h3>Roadmap:</h3>
 
-            <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-              <div class="col">
-                <div class="card mb-4 rounded-3 shadow-sm">
-                  <div class="card-header py-3">
-                    <h4 class="my-0 fw-normal">Initial - Portal</h4>
-                  </div>
-                  <div class="card-body">
-                    <h1 class="card-title pricing-card-title">2021<small class="text-muted fw-light">/Q4</small></h1>
-                    <ul class="list-unstyled mt-3 mb-4">
-                      <li>- Launch Contract</li>
-                      <li>- Marketing deals</li>
-                      <li>- Submit for listing/verify</li>
-                      <li>- Contract audit</li>
-                      <li>- Lock LP forever (<a
-                          href="https://ftmscan.com/token/0x8c203ccb9fb88d63dffb94ca445e378c05ab0f7b#balances">Done!</a>)
-                      </li>
-                      <li>- 100 Telegram user</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card mb-4 rounded-3 shadow-sm">
-                  <div class="card-header py-3">
-                    <h4 class="my-0 fw-normal">Stage 2 - Teleport</h4>
-                  </div>
-                  <div class="card-body">
-                    <h1 class="card-title pricing-card-title">2022<small class="text-muted fw-light">/Q1</small></h1>
-                    <ul class="list-unstyled mt-3 mb-4">
-                      <li>- Portal NFTs</li>
-                      <li>- 5000 Holders</li>
-                      <li>- Reduce Fees and renounceOwnership</li>
-                      <li>- Lock Tokenomics forever</li>
-                      <li>- Portal DAO Voting page</li>
-                      <li>- CoinGekko / CMC</li>
-                    </ul>
-
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card mb-4 rounded-3 shadow-sm ">
-                  <div class="card-header py-3">
-                    <h4 class="my-0 fw-normal">Stage 3 - Mass Teleport</h4>
-                  </div>
-                  <div class="card-body">
-                    <h1 class="card-title pricing-card-title">2022<small class="text-muted fw-light">/Q2+</small></h1>
-                    <ul class="list-unstyled mt-3 mb-4">
-                      <li>- $1M+ market cap</li>
-                      <li>- 15000 Holders</li>
-                      <li>- Portal Staking</li>
-                      <li>- CEX listing</li>
-                      <li>- Portal Launchpad</li>
-                      <li>- Fantom Education portal</li>
-                    </ul>
-
-                  </div>
-                </div>
-              </div>
+            <div style="text-align: left; margin-bottom: 1rem; padding: 1rem;">
+              <h3>Help us to grow:</h3>
+              <i>Please Vote every day!</i> <br>
+              <br>
+              - <a target="_blank"
+                href="https://top100token.com/address/0x0aa2037e40a78a169b5214418d66377ab828cb23">Top100token.com</a>
+              <br>
+              - <a target="_blank" href="https://coinsniper.net/coin/18182">CoinSniper.net</a>
+              <br>
+              - <a target="_blank"
+                href="https://coinalpha.app/token/0x0aa2037e40a78a169b5214418d66377ab828cb23">CoinAlpha.app</a>
+              <br>
+              - <a target="_blank"
+                href="https://www.earlycoins.io/coin-details/61869274dd8cd84c44210ee3">Earlycoins.io</a>
+              <br>
+              - <a target="_blank"
+                href="https://www.dextools.io/app/fantom/pair-explorer/0x8c203ccb9fb88d63dffb94ca445e378c05ab0f7b">DexTools</a>
+              <br>
             </div>
 
 
           </div>
+          <div class="col">
+
+            <div style="text-align: left; margin-bottom: 1rem; padding: 1rem;" style="margin-bottom: 1rem;">
+              <h3>Tokenomics:</h3>
+              - Fair launched<br>
+              - TotalSupply: 100,000,000,000<br>
+              - BuyFee: 5%<br>
+              - SellFee: 20% <br>
+              - Liquidity Reflection: Buy 2% / Sell 6%<br>
+              - Fees will be lowered then removed over time!<br>
+              - LP Locked on 0x0000dead (<a
+                href="https://ftmscan.com/token/0x8c203ccb9fb88d63dffb94ca445e378c05ab0f7b#balances">Proof!</a>) <br>
+            </div>
+
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+
+      <div style="padding-top: 2rem; padding-bottom: 2rem;" class="container">
+
+        <h3>How to buy:</h3>
+        - Install Metamask or Trust Wallet<br>
+        <center>
+          <a href="https://metamask.io/" target="_blank"><img src="./images/metamask.png" style="max-width: 300px;"
+              class="img-fluid"></a>
+        </center>
+        <br>
+        - Add Fantom Chain into your Wallet (<a href="https://docs.fantom.foundation/tutorials/set-up-metamask"
+          target="_blank">https://docs.fantom.foundation/tutorials/set-up-metamask</a>)
+        <br>
+        - Buy/Transfer some asset to Fantom network (Recommended: <a href="https://anyswap.exchange/#/router"
+          target="_blank">https://anyswap.exchange/#/router</a> )
+        <br>
+        - Buy on SpookySwap / Slippage 5-10%
+        <br>
+        <div style="margin: 1rem;">
+
+          <center>
+            <a style="margin-top: 0.5rem;"
+              href="https://spookyswap.finance/swap?outputCurrency=0x0aa2037e40a78a169b5214418d66377ab828cb23"
+              target="_blank" class="btn btn-success btn-lg ">👻Buy on SpookySwap</a>
+            <a style="margin-top: 0.5rem;" class="btn btn-primary btn-lg"
+              href="https://ftmscan.com/address/0x0aa2037e40a78a169b5214418d66377ab828cb23"
+              target="_blank">📋Contract</a>
+            <a style="margin-top: 0.5rem;" class="btn btn-warning btn-lg"
+              href="https://www.dextools.io/app/fantom/pair-explorer/0x8c203ccb9fb88d63dffb94ca445e378c05ab0f7b"
+              target="_blank">📈Chart</a>
 
 
 
+          </center>
 
         </div>
+      </div>
+    </section>
+    <section style="background-color: #222324;">
+
+      <div style="padding-top: 2rem;" class="container">
+
+
+
+        <h3>Roadmap:</h3>
+
+        <div style="padding-top: 1rem;" class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+          <div class="col">
+            <div class="card mb-4 rounded-3 shadow-sm">
+              <div class="card-header py-3">
+                <h4 class="my-0 fw-normal">Initial - Portal</h4>
+              </div>
+              <div class="card-body">
+                <h1 class="card-title pricing-card-title">2021<small class="text-muted fw-light">/Q4</small></h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>- Launch Contract</li>
+                  <li>- Marketing deals</li>
+                  <li>- Submit for listing/verify</li>
+                  <li>- Contract audit</li>
+                  <li>- Lock LP forever
+                  </li>
+                  <li>- 100 Telegram user</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-4 rounded-3 shadow-sm">
+              <div class="card-header py-3">
+                <h4 class="my-0 fw-normal">Stage 2 - Teleport</h4>
+              </div>
+              <div class="card-body">
+                <h1 class="card-title pricing-card-title">2022<small class="text-muted fw-light">/Q1</small></h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>- Portal NFTs</li>
+                  <li>- 5000 Holders</li>
+                  <li>- Reduce Fees and renounceOwnership</li>
+                  <li>- Lock Tokenomics forever</li>
+                  <li>- Portal DAO Voting page</li>
+                  <li>- CoinGekko / CMC</li>
+                </ul>
+
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-4 rounded-3 shadow-sm ">
+              <div class="card-header py-3">
+                <h4 class="my-0 fw-normal">Stage 3 - Mass Teleport</h4>
+              </div>
+              <div class="card-body">
+                <h1 class="card-title pricing-card-title">2022<small class="text-muted fw-light">/Q2+</small></h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>- $1M+ market cap</li>
+                  <li>- 15000 Holders</li>
+                  <li>- Portal Staking</li>
+                  <li>- CEX listing</li>
+                  <li>- Portal Launchpad</li>
+                  <li>- Fantom Education portal</li>
+                </ul>
+
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+
+
+
+
+      </div>
+      </div>
       </div>
     </section>
   </prologe>
